--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,34 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require_tree .
- */
+body {
+	background-color: #AAA;
+	color: #FFF;
+}
+.nav {
+	background-color: rgba(24,68,115,.8);
+	height: 40px;
+	border-radius: 5px;
+}
+
+.logo {
+	display: inline-block;
+	margin-left: 10px;
+	line-height: 40px;
+}
+.menu {
+	display: inline-block;
+	float: right;
+	margin-right: 10px;
+	line-height: 35px;
+}
+
+.menu a{
+	text-decoration: none;
+	color: #FFF;
+}
+
+.chat {
+	border-radius: 5px;
+	margin-top: 10px;
+	background-color: rgba(255, 255, 255, .7);
+	width: 100%;
+	height: 400px;
+}
