Basic Chat window

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,8 +1,9 @@
+<div class="chat">
+</div>
+<div class="user_input">
+<% form_for Message.new do |f| %>
+ <%= f.text_area :text %>
+ <%= f.submit %>
+ <% end %>
+</div>
 
-<% if current_user %>
-Welcome, <%= @user.name %>
-<%= link_to "Signout", signout_path %>
-<% else %>
-<%= link_to "Signin", signin_path %>
-<%= link_to "Signup", signup_path %>
-<% end %>
